Muutujad, {{ }}, click, funktsioonid

--- a/veebipood/src/app/app.component.html
+++ b/veebipood/src/app/app.component.html
@@ -2,6 +2,12 @@
 <br><br>
 <div>tekst</div>
 tekst2
+<!-- ctrl + ä kommentaari jaoks -->
+<!-- routerLink="/" suunab meid localhost:4200/
+                    https//www.delfi.ee/ -->
 <button routerLink="/">AVALEHELE</button>
+<!-- routerLink="/ostukorv" suunab meid localhost:4200/ostukorv
+                    https//www.delfi.ee/ostukorv -->
 <button routerLink="/ostukorv">OSTUKORVI</button>
+<button routerLink="/lisa-toode">LISA TOODE</button>
 <router-outlet></router-outlet>
