--- a/veebipood/src/app/lisa-toode/lisa-toode.component.html
+++ b/veebipood/src/app/lisa-toode/lisa-toode.component.html
@@ -1,1 +1,4 @@
-<p>lisa-toode works!</p>
+<br> <br>
+<label>Toote nimi</label> <br>
+<input (keyup.enter)="sisestaToode()" [(ngModel)]="uusToode" type="text"> <br>
+<button (click)="sisestaToode()">Sisesta</button> <br>
