Vormi valideerimine, undefined/null

--- a/veebipood/src/app/app.component.html
+++ b/veebipood/src/app/app.component.html
@@ -16,4 +16,6 @@ tekst2
 <button routerLink="/ostukorv">OSTUKORVI</button>
 <button routerLink="/lisa-toode">LISA TOODE</button>
 <button routerLink="/poed">POED</button>
+<button routerLink="/lisa-keskus">LISA KESKUS</button>
+<button routerLink="/halda-tooteid">HALDA TOOTEID</button>
 <router-outlet></router-outlet>
