--- a/veebipood/src/app/koduleht/koduleht.component.html
+++ b/veebipood/src/app/koduleht/koduleht.component.html
@@ -1,5 +1,8 @@
+              <!--    [{nimi: "asda", hind: 3123},{2},{3}] -->
 <div *ngFor="let toode of tooted">
-  <span routerLink="toode/{{toode.nimi.toLowerCase().replaceAll(' ', '-')}}">{{ toode.nimi }} hinnaga {{ toode.hind }} €</span>
+  <span routerLink="toode/{{toode.nimi.toLowerCase().replaceAll(' ', '-')}}">
+    {{ toode.nimi }} hinnaga {{ toode.hind }} €
+  </span>
   <button (click)="lisaOstukorvi(toode)">Lisa ostukorvi</button>
 </div>
 
