Muuda-toode: FormGroup, FormControl, formControlName, reactiveFormsModule import

--- a/veebipood/src/app/app.component.html
+++ b/veebipood/src/app/app.component.html
@@ -18,4 +18,5 @@ tekst2
 <button routerLink="/poed">POED</button>
 <button routerLink="/lisa-keskus">LISA KESKUS</button>
 <button routerLink="/halda-tooteid">HALDA TOOTEID</button>
+<button routerLink="/halda-poode">HALDA POODE</button>
 <router-outlet></router-outlet>
