--- a/webshop/src/app/admin/add-product/add-product.component.html
+++ b/webshop/src/app/admin/add-product/add-product.component.html
@@ -1,1 +1,19 @@
-<p>add-product works!</p>
+
+<!-- form    a-form   ngForm -->
+<form (ngSubmit)="onSubmit(form)" #form="ngForm">
+  <label>ID</label> <br>
+  <input ngModel name="id" type="number" required><br>
+  <label>{{'add-product.img-address' | translate}}</label> <br>
+  <input ngModel name="imgSrc" type="text" required><br>
+  <label>{{'add-product.name' | translate}}</label> <br>
+  <input ngModel name="name" type="text" required><br>
+  <label>{{'add-product.price' | translate}}</label> <br>
+  <input ngModel name="price" type="number" required><br>
+  <label>Kirjeldus</label> <br>
+  <input ngModel name="description" type="text" required><br>
+  <label>Kategooria</label> <br>
+  <input ngModel name="category" type="text" required><br>
+  <label>Aktiivsus</label> <br>
+  <input ngModel name="isActive" type="checkbox" required><br>
+  <button class="btn btn-success">SISESTA</button>
+</form>
