Andmebaas, toodete haldamine, kustutamine, üksik toode

--- a/webshop/src/app/single-product/single-product.component.html
+++ b/webshop/src/app/single-product/single-product.component.html
@@ -1,3 +1,9 @@
-<p>single-product works!</p>
-
-<!-- KODUS -->
+<div *ngIf="product">
+  <img src="{{ product.imgSrc }}" alt="">
+  <div>{{ product.id }}</div>
+  <div>{{ product.name }}</div>
+  <div>{{ product.category }}</div>
+  <div>{{ product.description }}</div>
+  <div>{{ product.price }}</div>
+  <div>{{ product.isActive }}</div>
+</div>
