--- a/webshop/src/app/admin/view-products/view-products.component.html
+++ b/webshop/src/app/admin/view-products/view-products.component.html
@@ -1,1 +1,6 @@
-<p>view-products works!</p>
+<div *ngFor="let product of products">
+  <img src="{{ product.imgSrc }}" alt="">
+  <div>{{ product.name }}</div>
+  <div>{{ product.price }} €</div>
+  <button (click)="deleteProduct(product)">X</button>
+</div>
