--- a/webshop/src/app/home/home.component.html
+++ b/webshop/src/app/home/home.component.html
@@ -1,8 +1,14 @@
+<button (click)="sortAZ()">Sorteeri A-Z</button>
+<button (click)="sortZA()">Sorteeri Z-A</button>
+<button (click)="sortPriceAsc()">Sorteeri hind kasvavalt</button>
+<button (click)="sortPriceDesc()">Sorteeri hind kahanevalt</button>
 
 <div *ngFor="let product of products">
-  <img src="{{ product.imgSrc }}" alt="">
-  <div>{{ product.name }}</div>
-  <div>{{ product.price }} €</div>
+  <div routerLink="toode/{{product.id}}">
+    <img src="{{ product.imgSrc }}" alt="">
+    <div>{{ product.name }}</div>
+    <div>{{ product.price }} €</div>
+  </div>
   <button (click)="addToCart(product)">{{'home.add-cart-button' | translate}}</button>
 </div>
 
