--- a/webshop/src/app/admin/add-product/add-product.component.html
+++ b/webshop/src/app/admin/add-product/add-product.component.html
@@ -1,8 +1,9 @@
 
 <!-- form    a-form   ngForm -->
+<div>{{ message }}</div>
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   <label>ID</label> <br>
-  <input ngModel name="id" type="number" required><br>
+  <input (ngModelChange)="checkIdUniqueness(form.value.id)" ngModel name="id" type="number" required><br>
   <label>{{'add-product.img-address' | translate}}</label> <br>
   <input ngModel name="imgSrc" type="text" required><br>
   <label>{{'add-product.name' | translate}}</label> <br>
@@ -15,5 +16,5 @@
   <input ngModel name="category" type="text" required><br>
   <label>Aktiivsus</label> <br>
   <input ngModel name="isActive" type="checkbox" required><br>
-  <button class="btn btn-success">SISESTA</button>
+  <button [disabled]="buttonDisabled" class="btn btn-success">SISESTA</button>
 </form>
