--- a/webshop/src/app/admin/view-products/view-products.component.html
+++ b/webshop/src/app/admin/view-products/view-products.component.html
@@ -1,6 +1,12 @@
+<br>
+<input [(ngModel)]="searchedProduct" (ngModelChange)="searchProducts()" type="text"> <br>
+<br>
+
 <div *ngFor="let product of products">
   <img src="{{ product.imgSrc }}" alt="">
   <div>{{ product.name }}</div>
+  <div>{{ product.description }}</div>
   <div>{{ product.price }} €</div>
   <button (click)="deleteProduct(product)">X</button>
+  <button routerLink="/admin/muuda/{{product.id}}">Muuda</button>
 </div>
