ostukorvi kujundus, pipes, kategooriate lisamine ja dropdownist võtmine

--- a/webshop/src/app/admin/view-products/view-products.component.html
+++ b/webshop/src/app/admin/view-products/view-products.component.html
@@ -1,3 +1,5 @@
+<input [(ngModel)]="descriptionLength" min="0" max="100" type="range">
+{{descriptionLength}}
 <br>
 <input [(ngModel)]="searchedProduct" (ngModelChange)="searchProducts()" type="text"> <br>
 <br>
@@ -5,8 +7,8 @@
 <div *ngFor="let product of products">
   <img src="{{ product.imgSrc }}" alt="">
   <div>{{ product.name }}</div>
-  <div>{{ product.description }}</div>
-  <div>{{ product.price }} €</div>
+  <div>{{ product.description | shortenDescription:descriptionLength }}</div>
+  <div>{{ product.price | productPrice }}</div>
   <button (click)="deleteProduct(product)">X</button>
   <button routerLink="/admin/muuda/{{product.id}}">Muuda</button>
 </div>
