--- a/webshop/src/app/admin/add-product/add-product.component.html
+++ b/webshop/src/app/admin/add-product/add-product.component.html
@@ -13,8 +13,11 @@
   <label>Kirjeldus</label> <br>
   <input ngModel name="description" type="text" required><br>
   <label>Kategooria</label> <br>
-  <input ngModel name="category" type="text" required><br>
+  <!-- <input ngModel name="category" type="text" required><br> -->
+  <select ngModel name="category">
+    <option *ngFor="let category of categories">{{ category.name }}</option>
+  </select> <br>
   <label>Aktiivsus</label> <br>
   <input ngModel name="isActive" type="checkbox" required><br>
-  <button [disabled]="buttonDisabled" class="btn btn-success">SISESTA</button>
+  <button [disabled]="buttonDisabled || form.invalid" class="btn btn-success">SISESTA</button>
 </form>
