--- a/webshop/src/app/home/home.component.html
+++ b/webshop/src/app/home/home.component.html
@@ -1,3 +1,16 @@
+<div>{{kuupaev | date:"hh:mm:ss"}}</div>
+<div>{{protsent | percent}}</div>
+<div>{{protsent * 100 + "%"}}</div>
+<div>{{number | percent}}</div>
+<br>
+<div>{{protsent | currency:"EUR"}}</div>
+<div>{{"€" + protsent.toFixed(2)}}</div>
+<div>{{number | currency:"EUR"}}</div>
+<div>{{tekst | uppercase }}</div>
+<div>{{tekst | titlecase }}</div>
+<div>{{tekst | lowercase }}</div>
+<br>
+
 <div>Kokku on {{ products.length }} toodet</div>
 <div [ngClass]="{'active-category': selectedCategory === 'all'}" (click)="selectCategory('all')">Kõik kategooriad</div>
 <div [ngClass]="{'active-category': selectedCategory === category}" (click)="selectCategory(category)" *ngFor="let category of categories">
@@ -13,7 +26,7 @@
   <div routerLink="toode/{{product.id}}">
     <img src="{{ product.imgSrc }}" alt="">
     <div>{{ product.name }}</div>
-    <div>{{ product.price }} €</div>
+    <div>{{ product.price | productPrice }}</div>
   </div>
   <button (click)="addToCart(product)">{{'home.add-cart-button' | translate}}</button>
 </div>
