--- a/webshop/src/app/home/home.component.html
+++ b/webshop/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>{{kuupaev | date:"hh:mm:ss"}}</div>
+<!-- <div>{{kuupaev | date:"hh:mm:ss"}}</div>
 <div>{{protsent | percent}}</div>
 <div>{{protsent * 100 + "%"}}</div>
 <div>{{number | percent}}</div>
@@ -9,7 +9,7 @@
 <div>{{tekst | uppercase }}</div>
 <div>{{tekst | titlecase }}</div>
 <div>{{tekst | lowercase }}</div>
-<br>
+<br> -->
 
 <div>Kokku on {{ products.length }} toodet</div>
 <div [ngClass]="{'active-category': selectedCategory === 'all'}" (click)="selectCategory('all')">Kõik kategooriad</div>
