--- a/webshop/src/app/admin/edit-product/edit-product.component.html
+++ b/webshop/src/app/admin/edit-product/edit-product.component.html
@@ -6,7 +6,10 @@
     <label>Nimi</label> <br>
     <input formControlName="name" type="text" required> <br>
     <label>Kategooria</label> <br>
-    <input formControlName="category" type="text" required> <br>
+    <!-- <input formControlName="category" type="text" required> <br> -->
+    <select formControlName="category">
+      <option *ngFor="let category of categories">{{category.name}}</option>
+    </select> <br>
     <button type="button" (click)="openInfo()">?</button>
     <label>Pildi aadress</label> <br>
     <div *ngIf="infoOpen">Pilt peab olema http(s):// kujul ja lõppema .png / .jpg või .jpeg</div>
