--- a/webshop/src/app/map/map.component.html
+++ b/webshop/src/app/map/map.component.html
@@ -1,3 +1,6 @@
+<button (click)="onZoom()">Kõik poed</button>
+<button (click)="onZoomYl()">Ülemiste</button>
+<button (click)="onZoomKr()">Kristiine</button>
 <div class="map-container">
   <div class="map-frame">
     <div id="map"></div>
