--- a/webshop/src/app/navbar/navbar.component.html
+++ b/webshop/src/app/navbar/navbar.component.html
@@ -9,9 +9,12 @@
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" routerLink="/admin">{{"navbar.admin-button" | translate }}</a>
         <a class="nav-link" routerLink="/ostukorv">{{"navbar.cart-button" | translate }}</a>
-        <img class="lang" (click)="changeLanguage('en')" src="assets/english.png" alt="">
-        <img class="lang" (click)="changeLanguage('ee')" src="assets/estonian.png" alt="">
-        <img class="lang" (click)="changeLanguage('ru')" src="assets/russian.png" alt="">
+        <a class="nav-link" routerLink="/poed">Poed</a>
+        <div>
+          <img class="lang" (click)="changeLanguage('en')" src="assets/english.png" alt="">
+          <img class="lang" (click)="changeLanguage('ee')" src="assets/estonian.png" alt="">
+          <img class="lang" (click)="changeLanguage('ru')" src="assets/russian.png" alt="">
+        </div>
       </div>
     </div>
   </div>
