Pakiautomaadid, email, karusell-galerii

--- a/webshop/src/app/cart/cart.component.css
+++ b/webshop/src/app/cart/cart.component.css
@@ -46,3 +46,12 @@
 }
 
 .cart-sum {}
+
+.button-disabled {
+  opacity: 0.3;
+}
+
+.button-disabled:hover {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
