--- a/webshop/src/app/navbar/navbar.component.html
+++ b/webshop/src/app/navbar/navbar.component.html
@@ -10,6 +10,7 @@
         <a class="nav-link active" aria-current="page" routerLink="/admin">{{"navbar.admin-button" | translate }}</a>
         <a class="nav-link" routerLink="/ostukorv">{{"navbar.cart-button" | translate }}</a>
         <a class="nav-link" routerLink="/poed">Poed</a>
+        <a class="nav-link" routerLink="/meist">Meist</a>
         <div>
           <img class="lang" (click)="changeLanguage('en')" src="assets/english.png" alt="">
           <img class="lang" (click)="changeLanguage('ee')" src="assets/estonian.png" alt="">
