--- a/webshop/src/styles.css
+++ b/webshop/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css");
+
