--- a/webshop/src/app/navbar/navbar.component.html
+++ b/webshop/src/app/navbar/navbar.component.html
@@ -17,6 +17,7 @@
           <img class="lang" (click)="changeLanguage('ru')" src="assets/russian.png" alt="">
         </div>
       </div>
+      <div>{{ cartSum | productPrice }}</div>
     </div>
   </div>
 </nav>
