--- a/webshop/src/app/home/home.component.css
+++ b/webshop/src/app/home/home.component.css
@@ -2,3 +2,14 @@
     font-weight: bold;
     text-decoration: underline;
 }
+
+.carousel-item img {
+    width: 100%;
+    height: 300px;
+}
+
+.carousel {
+    height: 300px;
+    width: 80%;
+    margin: 0 10%;
+}
