--- a/webshop/src/app/home/home.component.html
+++ b/webshop/src/app/home/home.component.html
@@ -5,8 +5,6 @@
       <img
         [src]="slide.src"
         alt="{{slide.title}}"
-        class="d-block w-100"
-        loading="lazy"
       />
       <c-carousel-caption class="d-none d-md-block">
         <h3>{{slide.title}}</h3>
@@ -32,6 +30,8 @@
 <div>{{tekst | titlecase }}</div>
 <div>{{tekst | lowercase }}</div>
 <br> -->
+
+<app-spinner *ngIf="isLoading"></app-spinner>
 
 <div>Kokku on {{ products.length }} toodet</div>
 <div [ngClass]="{'active-category': selectedCategory === 'all'}" (click)="selectCategory('all')">Kõik kategooriad</div>
